--- a/app/src/main/res/layout/fragment_onboarding_screens.xml
+++ b/app/src/main/res/layout/fragment_onboarding_screens.xml
@@ -4,6 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/fragment_collection_object_button_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skip"
+        android:textSize="16sp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/dark_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"/>
+
     <ImageView
         android:id="@+id/fragment_collection_object_image"
         android:layout_width="wrap_content"
@@ -22,7 +35,7 @@
         android:layout_marginTop="@dimen/margin_top_between_element"
         android:layout_marginBottom="@dimen/margin_small"
         android:textSize="@dimen/title_text_size"
-        android:textColor="@color/dark_title"
+        android:textColor="@color/dark"
         app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +48,7 @@
         android:layout_marginHorizontal="@dimen/textview_margin_horizontal"
         android:gravity="center"
         android:textSize="@dimen/subtitle_text_size"
-        android:textColor="@color/dark_gray_subtitle"
+        android:textColor="@color/dark_gray"
         app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_position1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
