--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="round_button_color">#E3562A</color>
-    <color name="dark_title">#3C3A36</color>
-    <color name="dark_gray_subtitle">#78746D</color>
+    <color name="dark">#3C3A36</color>
+    <color name="dark_gray">#78746D</color>
 </resources>
