--- a/app/src/main/res/layout/activity_on_boarding_screens.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screens.xml
@@ -5,9 +5,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.OnBoardingScreensActivity">
+    <Button
+        android:id="@+id/activity_onboarding_screens_button_skip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/skip"
+        android:textSize="16sp"
+        android:layout_marginTop="@dimen/margin_top_between_element"
+        android:layout_marginEnd="@dimen/margin_horizontal"
+        android:textColor="@color/dark_gray"
+        android:background="@color/button_skip_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:clickable="true"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/activity_onboarding_screens_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:clickable="true" />
+
+    <Button
+        android:id="@+id/activity_onboarding_screens_button_next"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginHorizontal="@dimen/margin_horizontal_button"
+        android:layout_marginBottom="@dimen/margin_bottom_parent"
+        android:background="@drawable/round_button"
+        android:text="@string/next"
+        android:textColor="@color/white"
+        android:textSize="@dimen/button_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
