--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="title_text_size">24sp</dimen>
     <dimen name="subtitle_text_size">14sp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_horizontal">16dp</dimen>
 </resources>
