--- a/app/src/main/res/layout/activity_on_boarding_screens.xml
+++ b/app/src/main/res/layout/activity_on_boarding_screens.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.view.OnBoardingScreensActivity">
+
     <Button
         android:id="@+id/activity_onboarding_screens_button_skip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/skip"
-        android:textSize="16sp"
         android:layout_marginTop="@dimen/margin_top_between_element"
         android:layout_marginEnd="@dimen/margin_horizontal"
-        android:textColor="@color/dark_gray"
         android:background="@color/button_skip_color"
+        android:clickable="true"
+        android:text="@string/skip"
+        android:textColor="@color/dark_gray"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:clickable="true"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/activity_onboarding_screens_viewpager"
