--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#BEBAB3</color>
+    <color name="dark">#3C3A36</color>
+    <color name="dark_gray">#78746D</color>
+    <color name="round_button_color">#E3562A</color>
 </resources>
