--- a/app/src/main/res/layout/fragment_onboarding_screens.xml
+++ b/app/src/main/res/layout/fragment_onboarding_screens.xml
@@ -5,55 +5,55 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/fragment_collection_object_image"
+        android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_parent"
         android:contentDescription="@string/content_image"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_title"
+        app:layout_constraintBottom_toTopOf="@+id/title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/fragment_collection_object_title"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_between_element"
         android:layout_marginBottom="@dimen/margin_small"
         android:textColor="@color/dark"
         android:textSize="@dimen/title_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_subtitle"
+        app:layout_constraintBottom_toTopOf="@+id/subtitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_image" />
+        app:layout_constraintTop_toBottomOf="@+id/image" />
 
     <TextView
-        android:id="@+id/fragment_collection_object_subtitle"
+        android:id="@+id/subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/textview_margin_horizontal"
         android:gravity="center"
         android:textColor="@color/dark_gray"
         android:textSize="@dimen/subtitle_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_collection_object_position1"
+        app:layout_constraintBottom_toTopOf="@+id/position1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_title" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <ImageView
-        android:id="@+id/fragment_collection_object_position1"
+        android:id="@+id/position1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_between_element"
         android:layout_marginEnd="@dimen/margin_between_navigation_element"
         android:background="@drawable/ic_tab"
         android:contentDescription="@string/navigation_image"
-        app:layout_constraintEnd_toStartOf="@+id/fragment_collection_object_position2"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />
+        app:layout_constraintEnd_toStartOf="@+id/position2"
+        app:layout_constraintTop_toBottomOf="@+id/subtitle" />
 
     <ImageView
-        android:id="@+id/fragment_collection_object_position2"
+        android:id="@+id/position2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_top_between_element"
@@ -61,17 +61,17 @@
         android:contentDescription="@string/navigation_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />
+        app:layout_constraintTop_toBottomOf="@+id/subtitle" />
 
     <ImageView
-        android:id="@+id/fragment_collection_object_position3"
+        android:id="@+id/position3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_between_navigation_element"
         android:layout_marginTop="@dimen/margin_top_between_element"
         android:background="@drawable/ic_tab"
         android:contentDescription="@string/navigation_image"
-        app:layout_constraintStart_toEndOf="@+id/fragment_collection_object_position2"
-        app:layout_constraintTop_toBottomOf="@+id/fragment_collection_object_subtitle" />
+        app:layout_constraintStart_toEndOf="@+id/position2"
+        app:layout_constraintTop_toBottomOf="@+id/subtitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
