--- a/app/src/main/res/layout/activity_sign_up_screen.xml
+++ b/app/src/main/res/layout/activity_sign_up_screen.xml
@@ -49,6 +49,7 @@
         android:layout_marginTop="14dp"
         android:background="@drawable/edittext_sign_up"
         android:hint="@string/name"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subtitle_textview" />
@@ -61,6 +62,7 @@
         android:layout_marginTop="@dimen/sign_up_margin_between_element"
         android:background="@drawable/edittext_sign_up"
         android:hint="@string/e_mail"
+        android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/name_edittext" />
@@ -83,6 +85,7 @@
             android:layout_height="@dimen/sign_up_edit_text_height"
             android:background="@drawable/edittext_sign_up"
             android:inputType="textPassword"
+            android:singleLine="true"
             android:hint="@string/password" />
     </com.google.android.material.textfield.TextInputLayout>
 
