--- a/app/src/main/res/layout/fragment_words.xml
+++ b/app/src/main/res/layout/fragment_words.xml
@@ -17,6 +17,25 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textview_word_transcription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/words_margin_start"
+        android:text="asrtgdrehrtyh"
+        app:layout_constraintBottom_toBottomOf="@id/textview_word"
+        app:layout_constraintStart_toEndOf="@id/textview_word" />
+
+    <ImageButton
+        android:id="@+id/button_sound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/words_margin_start"
+        android:background="@drawable/button"
+        android:src="@drawable/ic_sound"
+        app:layout_constraintBottom_toBottomOf="@id/textview_word_transcription"
+        app:layout_constraintStart_toEndOf="@id/textview_word_transcription" />
+
+    <TextView
         android:id="@+id/textview_part_of_speech"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,6 +48,17 @@
         app:layout_constraintTop_toBottomOf="@id/textview_word" />
 
     <TextView
+        android:id="@+id/textview_part_of_speech_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/words_margin_start"
+        android:text="tmp"
+        android:textColor="@color/black"
+        android:textSize="@dimen/subtext_text_size"
+        app:layout_constraintBottom_toBottomOf="@id/textview_part_of_speech"
+        app:layout_constraintStart_toEndOf="@id/textview_part_of_speech" />
+
+    <TextView
         android:id="@+id/textview_meanings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,5 +69,29 @@
         android:textSize="@dimen/words_subtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_part_of_speech" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/height"
+        android:layout_marginVertical="@dimen/recycler_view_margin_vertical"
+        app:layout_constrainedHeight="true"
+        app:layout_constraintBottom_toTopOf="@id/button_add_to_dict"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_meanings" />
+
+    <Button
+        android:id="@+id/button_add_to_dict"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/button_height"
+        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
+        android:background="@drawable/round_button"
+        android:text="Add to Dictionary"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="@dimen/button_text_size"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
