--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="dark">#3C3A36</color>
     <color name="dark_gray">#78746D</color>
     <color name="button_skip_color">#00000000</color>
+    <color name="selected_dot">#65AAEA</color>
+    <color name="dots_color">#D5D4D4</color>
 </resources>
