add const in resourse

--- a/app/src/main/res/layout/list_meaning_word.xml
+++ b/app/src/main/res/layout/list_meaning_word.xml
@@ -9,38 +9,34 @@
         android:id="@+id/textview_word_meaning_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textSize="14sp"
+        android:layout_marginHorizontal="@dimen/meaning_word_margin_horizontal"
+        android:layout_marginTop="@dimen/meaning_word_margin_top"
         android:textColor="@color/black"
-        android:text="srtgdertytu"/>
+        android:textSize="@dimen/meaning_word_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textview_example"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        app:layout_constraintStart_toStartOf="@id/textview_word_meaning_content"
-        app:layout_constraintTop_toBottomOf="@id/textview_word_meaning_content"
+        android:layout_marginTop="@dimen/meaning_word_margin_top_text_view"
+        android:layout_marginBottom="@dimen/meaning_word_margin_bottom"
+        android:text="@string/example"
+        android:textColor="@color/light_blue"
+        android:textSize="@dimen/meaning_word_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Example: "
-        android:textSize="14sp"
-        android:textColor="#8bbfef"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"/>
+        app:layout_constraintStart_toStartOf="@id/textview_word_meaning_content"
+        app:layout_constraintTop_toBottomOf="@id/textview_word_meaning_content" />
 
     <TextView
         android:id="@+id/textview_example_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@id/textview_example"
+        android:textSize="@dimen/meaning_word_text_size"
         app:layout_constraintBottom_toBottomOf="@id/textview_example"
-        android:text="example_content"/>
-
+        app:layout_constraintStart_toEndOf="@id/textview_example" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
