--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -9,9 +9,9 @@
     <LinearLayout
         android:id="@+id/search_layout"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="24dp"
+        android:layout_height="@dimen/dictionary_search_field_height"
+        android:layout_marginHorizontal="@dimen/dictionary_search_field_margin_horizontal"
+        android:layout_marginTop="@dimen/dictionary_search_field_margin_top"
         android:background="@drawable/round_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +21,8 @@
             android:id="@+id/search_edittext"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginVertical="2dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginVertical="@dimen/dictionary_margin_vertical_2"
+            android:layout_marginStart="@dimen/dictionary_margin_start_edittext"
             android:layout_weight="6"
             android:background="@color/white"
             android:singleLine="true" />
@@ -32,9 +32,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginVertical="1dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="18dp"
+            android:layout_marginVertical="@dimen/dictionary_margin_vertical_button"
+            android:layout_marginStart="@dimen/dictionary_margin_start_button"
+            android:layout_marginEnd="@dimen/dictionary_margin_end_button"
             android:layout_weight="1"
             android:background="@drawable/button"
             android:src="@drawable/ic_search" />
@@ -43,8 +43,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="253dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_layout">
-    </FrameLayout>
+        android:minHeight="@dimen/dictionary_framelayout_min_height"
+        app:layout_constraintTop_toBottomOf="@+id/search_layout"></FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
