--- a/app/src/main/res/layout/fragment_playceholder.xml
+++ b/app/src/main/res/layout/fragment_playceholder.xml
@@ -8,11 +8,11 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/playceholder_margin_top"
         android:background="@drawable/ic_cool_kids_standing"
-        android:layout_marginTop="@dimen/playceholder_margin_top"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title_textview"
@@ -24,7 +24,7 @@
         android:textSize="@dimen/playceholder_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"/>
+        app:layout_constraintTop_toBottomOf="@id/image" />
 
     <TextView
         android:id="@+id/subtitle_textview"
