--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,18 @@
     <dimen name="recycler_view_margin_vertical">12dp</dimen>
     <dimen name="height">0dp</dimen>
     <dimen name="subtext_text_size">14sp</dimen>
+    <dimen name="dictionary_search_field_height">56dp</dimen>
+    <dimen name="dictionary_search_field_margin_horizontal">20dp</dimen>
+    <dimen name="dictionary_search_field_margin_top">24dp</dimen>
+    <dimen name="dictionary_margin_vertical_2">2dp</dimen>
+    <dimen name="dictionary_margin_start_edittext">20dp</dimen>
+    <dimen name="dictionary_margin_vertical_button">1dp</dimen>
+    <dimen name="dictionary_margin_start_button">5dp</dimen>
+    <dimen name="dictionary_margin_end_button">18dp</dimen>
+    <dimen name="dictionary_framelayout_min_height">253dp</dimen>
+    <dimen name="meaning_word_margin_top">16dp</dimen>
+    <dimen name="meaning_word_margin_horizontal">16dp</dimen>
+    <dimen name="meaning_word_text_size">14sp</dimen>
+    <dimen name="meaning_word_margin_top_text_view">8dp</dimen>
+    <dimen name="meaning_word_margin_bottom">16dp</dimen>
 </resources>
