--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -40,10 +40,14 @@
             android:src="@drawable/ic_search" />
     </LinearLayout>
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/word_host_fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="@dimen/dictionary_framelayout_min_height"
-        app:layout_constraintTop_toBottomOf="@+id/search_layout"></FrameLayout>
+        android:minHeight="@dimen/dictionary_fragment_min_height"
+        app:layout_constraintTop_toBottomOf="@+id/search_layout"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/nav_graph" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
