--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,11 +9,19 @@
         android:name="com.example.task.wordsfactory.ui.view.PlayceholderFragment"
         android:label="PlayceholderFragment" >
         <action
-            android:id="@+id/action_playceholderFragment_to_wordsFragment"
+            android:id="@+id/action_search_word"
             app:destination="@id/wordsFragment" />
     </fragment>
     <fragment
         android:id="@+id/wordsFragment"
         android:name="com.example.task.wordsfactory.ui.view.WordsFragment"
-        android:label="WordsFragment" />
+        android:label="WordsFragment" >
+        <action
+            android:id="@+id/action_search_word"
+            app:destination="@id/wordsFragment" />
+        <argument
+            android:name="word"/>
+        <argument
+            android:name="phonetic"/>
+    </fragment>
 </navigation>
