--- a/app/src/main/res/layout/fragment_words.xml
+++ b/app/src/main/res/layout/fragment_words.xml
@@ -10,7 +10,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
         android:layout_marginTop="@dimen/words_margin_top"
-        android:text="text tmp"
         android:textColor="@color/black"
         android:textSize="@dimen/words_word"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
-        android:text="asrtgdrehrtyh"
         app:layout_constraintBaseline_toBaselineOf="@id/textview_word"
         app:layout_constraintStart_toEndOf="@id/textview_word" />
 
@@ -41,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
         android:layout_marginTop="@dimen/words_margin_top"
-        android:text="tmp"
+        android:text="@string/part_of_speech"
         android:textColor="@color/black"
         android:textSize="@dimen/words_subtitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +50,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
-        android:text="tmp"
         android:textColor="@color/black"
         android:textSize="@dimen/subtext_text_size"
         app:layout_constraintBottom_toBottomOf="@id/textview_part_of_speech"
@@ -65,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
         android:layout_marginTop="@dimen/words_margin_top"
-        android:text="tmp2"
+        android:text="@string/meanings"
         android:textColor="@color/black"
         android:textSize="@dimen/words_subtitle"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +84,7 @@
         android:layout_height="@dimen/button_height"
         android:layout_marginHorizontal="@dimen/button_margin_horizontal"
         android:background="@drawable/round_button"
-        android:text="Add to Dictionary"
+        android:text="@string/add_to_dictionary"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="@dimen/button_text_size"
