--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,8 +20,7 @@
             android:id="@+id/action_search_word"
             app:destination="@id/wordsFragment" />
         <argument
-            android:name="word"/>
-        <argument
-            android:name="phonetic"/>
+            android:name="result_word"
+            app:argType="com.example.task.wordsfactory.ui.entity.Word" />
     </fragment>
 </navigation>
