--- a/app/src/main/res/layout/fragment_words.xml
+++ b/app/src/main/res/layout/fragment_words.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/textview_word"
@@ -69,9 +70,14 @@
         app:layout_constraintTop_toBottomOf="@id/textview_part_of_speech" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/meaningRecycler"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height"
+        android:layout_height="wrap_content"
+        android:minHeight="50dp"
         android:layout_marginVertical="@dimen/recycler_view_margin_vertical"
+        android:layout_marginHorizontal="@dimen/dictionary_search_field_margin_horizontal"
+        tools:listitem="@layout/item_meaning_word"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toTopOf="@id/button_add_to_dict"
         app:layout_constraintEnd_toEndOf="parent"
