--- a/app/src/main/res/layout/fragment_words.xml
+++ b/app/src/main/res/layout/fragment_words.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/words_margin_start"
         android:textColor="@color/black"
-        android:textSize="@dimen/subtext_text_size"
+        android:textSize="@dimen/words_subtext_text_size"
         app:layout_constraintBottom_toBottomOf="@id/textview_part_of_speech"
         app:layout_constraintBaseline_toBaselineOf="@id/textview_part_of_speech"
         app:layout_constraintStart_toEndOf="@id/textview_part_of_speech" />
@@ -72,10 +72,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meaningRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="50dp"
-        android:layout_marginVertical="@dimen/recycler_view_margin_vertical"
-        android:layout_marginHorizontal="@dimen/dictionary_search_field_margin_horizontal"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/words_recycler_view_margin_vertical"
+        android:layout_marginBottom="@dimen/meaning_word_margin_bottom"
         tools:listitem="@layout/item_meaning_word"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constrainedHeight="true"
@@ -87,13 +86,14 @@
     <Button
         android:id="@+id/button_add_to_dict"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/button_height"
-        android:layout_marginHorizontal="@dimen/button_margin_horizontal"
+        android:layout_height="@dimen/words_button_height"
+        android:layout_marginHorizontal="@dimen/words_button_margin_horizontal"
         android:background="@drawable/round_button"
         android:text="@string/add_to_dictionary"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="@dimen/button_text_size"
+        android:textSize="@dimen/words_button_text_size"
+        app:layout_constraintTop_toBottomOf="@id/meaningRecycler"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
