--- a/app/src/main/res/layout/item_meaning_word.xml
+++ b/app/src/main/res/layout/item_meaning_word.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="@dimen/recycler_word_margin_vertical"
-    android:background="@drawable/round_background">
+    android:background="@drawable/round_background"
+    android:paddingVertical="16dp">
 
     <TextView
         android:id="@+id/textview_word_meaning_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/meaning_word_margin_horizontal"
-        android:layout_marginTop="@dimen/meaning_word_margin_top"
         android:textColor="@color/black"
         android:textSize="@dimen/meaning_word_text_size"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/meaning_word_margin_top_text_view"
-        android:layout_marginBottom="@dimen/meaning_word_margin_bottom"
         android:layout_marginHorizontal="@dimen/meaning_word_margin_horizontal"
         android:text="@string/example"
         android:textColor="@color/black"
