--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="gray">#BEBAB3</color>
     <color name="dark">#3C3A36</color>
     <color name="dark_gray">#78746D</color>
-    <color name="round_button_color">#E3562A</color>
+    <color name="orange">#E3562A</color>
     <color name="light_blue">#8bbfef</color>
 </resources>
