--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,7 +9,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/wordfactory_fragment"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@id/menu"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,7 +25,6 @@
         android:paddingVertical="10dp"
         android:foregroundGravity="center_horizontal"
         style="@style/Widget.App.BottomNavigationView"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
