--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,11 @@
         <item name="colorOnSurface">@color/gray</item>
         <item name="colorPrimary">@color/orange</item>
     </style>
+
+    <style name="Round_button" parent="Theme.App">
+        <item name="android:background">@drawable/round_button</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/words_button_text_size</item>
+    </style>
 </resources>
