--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -3,27 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.view.TrainingActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textview_countword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="220dp"
         android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="220dp"
+        android:gravity="center_horizontal"
         android:textColor="@color/black"
         android:textSize="24sp"
-        android:text="There are 25 words in your Dictionary. Start the Training?"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button_start"
         android:layout_width="match_parent"
         android:layout_height="59dp"
         android:layout_marginHorizontal="33dp"
-        android:background="@drawable/round_button"
         android:layout_marginBottom="89dp"
+        android:background="@drawable/round_button"
         android:text="@string/start2"
         app:layout_constraintBottom_toBottomOf="parent" />
 
@@ -32,10 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="190dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layoutDescription="@xml/activity_training_scene"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_countword"
-        app:layoutDescription="@xml/activity_training_scene" />
-
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_countword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
