--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -48,10 +48,8 @@
         <ProgressBar
             android:id="@+id/progress_timer"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-            android:progress="100"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:progressDrawable="@drawable/custom_circular_progress_bar"/>
+            android:layout_width="170dp"
+            android:layout_height="170dp"/>
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
