--- a/app/src/main/res/xml/activity_training_scene.xml
+++ b/app/src/main/res/xml/activity_training_scene.xml
@@ -24,7 +24,7 @@
         <Constraint android:id="@+id/progress_timer">
             <CustomAttribute
                 app:attributeName="progress"
-                app:customIntegerValue="75"/>
+                app:customIntegerValue="80"/>
         </Constraint>
     </ConstraintSet>
 
@@ -37,7 +37,7 @@
         <Constraint android:id="@+id/progress_timer">
             <CustomAttribute
                 app:attributeName="progress"
-                app:customIntegerValue="50"/>
+                app:customIntegerValue="60"/>
         </Constraint>
     </ConstraintSet>
 
@@ -50,7 +50,7 @@
         <Constraint android:id="@+id/progress_timer">
             <CustomAttribute
                 app:attributeName="progress"
-                app:customIntegerValue="25"/>
+                app:customIntegerValue="40"/>
         </Constraint>
     </ConstraintSet>
 
@@ -63,7 +63,7 @@
         <Constraint android:id="@+id/progress_timer">
             <CustomAttribute
                 app:attributeName="progress"
-                app:customIntegerValue="0"/>
+                app:customIntegerValue="20"/>
         </Constraint>
     </ConstraintSet>
 
@@ -73,13 +73,22 @@
                 app:attributeName="text"
                 app:customStringValue="GO!"/>
         </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="0"/>
+        </Constraint>
     </ConstraintSet>
-
     <ConstraintSet android:id="@+id/end">
         <Constraint android:id="@+id/timer_text" >
             <CustomAttribute
                 app:attributeName="text"
                 app:customStringValue=""/>
+        </Constraint>
+        <Constraint android:id="@+id/progress_timer">
+            <CustomAttribute
+                app:attributeName="progress"
+                app:customIntegerValue="0"/>
         </Constraint>
     </ConstraintSet>
 
@@ -88,7 +97,7 @@
         app:constraintSetStart="@+id/start5"
         app:duration="1000"
         app:autoTransition="animateToEnd"
-        app:motionInterpolator="easeIn">
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
@@ -96,7 +105,7 @@
         app:constraintSetStart="@+id/start4"
         app:duration="1000"
         app:autoTransition="animateToEnd"
-        app:motionInterpolator="easeOut">
+        app:motionInterpolator="linear">
     </Transition>
 
     <Transition
