--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,12 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/words_button_text_size</item>
     </style>
+
+    <style name="Round_button.White" parent="Round_button">
+        <item name="android:background">@drawable/round_background</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/words_button_text_size</item>
+    </style>
 </resources>
