--- a/app/src/main/res/layout/activity_training_finish.xml
+++ b/app/src/main/res/layout/activity_training_finish.xml
@@ -75,6 +75,7 @@
         app:layout_constraintTop_toBottomOf="@id/correct_value" />
 
     <Button
+        android:id="@+id/button_again"
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:layout_marginHorizontal="25dp"
